# clearview

./: CMakeLists.txt  README.md
src/: callbacks.hpp  common.hpp  config.hpp  dxgi_test.cpp  gdi_test.cpp  gl_utils.hpp  main.cpp  nav.hpp  platform_types.hpp  x11_test.cpp
src/capture/: capture_win_dxgi.hpp  capture_x11.cpp  capture_x11.hpp
src/shaders/: frag.glsl  testFrag.glsl  testVert.glsl  vert.glsl
